[package]
name = "zoolana"
version = "0.1.0"
edition = "2018"
license = "MIT"
publish = false

[features]
test-bpf = []
no-entrypoint = []

[dependencies]
solana-program = "1.4.6"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.4.6"
solana-sdk = "1.4.6"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib"]
